Fix alignment of reports duration column

--- a/src/app/report/index.styl
+++ b/src/app/report/index.styl
@@ -8,9 +8,11 @@
     td.startedAt, td.stoppedAt
       white-space: nowrap
 
+    td.duration
+      text-align: right
+
     td.duration.total
       font-weight: bold
-      text-align: right
 
     tr.total th
       text-align: right
